<resources>
    <string name="app_name">Blood Donation</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="swipe_left_for_register">Swipe Left for Register</string>
    <string name="login">Login</string>
    <string name="password">Password</string>
    <string name="emailOrPhone">Email or Phone Number</string>
    <string name="e_mail">Email</string>
    <string name="phone">Phone Number</string>
    <string name="tag">A single drop of blood can make a huge difference.</string>
    <string name="swipe_right_for_login">Swipe Right for Login</string>
    <string name="register">Register</string>
    <string name="re_type_password">Re-type Password</string>
    <string name="your_name">Full Name</string>
    <string name="CIN">CIN</string>
</resources>